force-app/main/default/objects/Knowledge_Article__c/Knowledge_Article__c.object-meta.xml
<CustomObject>
    <description
  >Knowledge base articles used for AI-powered self-service deflection and agent assistance. Custom object stand-in for Salesforce Knowledge (not enabled in Trailhead Playgrounds).</description>
    <label>Knowledge Article</label>
    <nameField>
        <label>Title</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Knowledge Articles</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>