force-app/main/default/objects/Knowledge_Article__c/fields/Body__c.field-meta.xml
<CustomField>
    <fullName>Body__c</fullName>
    <description
  >Full article content used by the LLM for relevance ranking and by agents/customers for reading</description>
    <label>Body</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>