force-app/main/default/objects/Knowledge_Article__c/fields/Category__c.field-meta.xml
<CustomField>
    <fullName>Category__c</fullName>
    <description
  >Category of the article; matches Case.AI_Category__c picklist values for category-based pre-filtering</description>
    <label>Category</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Billing</fullName>
            </value>
            <value>
                <fullName>Technical Issue</fullName>
            </value>
            <value>
                <fullName>Account Access</fullName>
            </value>
            <value>
                <fullName>Feature Request</fullName>
            </value>
            <value>
                <fullName>Bug Report</fullName>
            </value>
            <value>
                <fullName>General Inquiry</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>