force-app/main/default/objects/Knowledge_Article__c/fields/Helpful_Count__c.field-meta.xml
<CustomField>
    <fullName>Helpful_Count__c</fullName>
    <defaultValue>0</defaultValue>
    <description
  >Incremented when an agent or customer marks the article helpful. Used for ranking ties.</description>
    <label>Helpful Count</label>
    <precision>9</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>