force-app/main/default/objects/Knowledge_Article__c/fields/Is_Published__c.field-meta.xml
<CustomField>
    <fullName>Is_Published__c</fullName>
    <defaultValue>false</defaultValue>
    <description
  >Only published articles are surfaced to agents/customers</description>
    <label>Is Published</label>
    <type>Checkbox</type>
</CustomField>