force-app/main/default/objects/Knowledge_Article__c/listViews/Published.listView-meta.xml
<ListView>
    <fullName>Published</fullName>
    <columns>NAME</columns>
    <columns>Category__c</columns>
    <columns>Helpful_Count__c</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Is_Published__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>Published</label>
</ListView>